--- a/frontend/archives.html
+++ b/frontend/archives.html
@@ -249,8 +249,10 @@
 
             // Déconnexion
             document.getElementById('logoutBtn').addEventListener('click', () => {
+                localStorage.removeItem('token');
+                localStorage.removeItem('user');
                 sessionStorage.clear();
-                window.location.href = '/login.html';
+                window.location.href = '/login';
             });
         }
 
@@ -393,6 +395,9 @@
         }
 
         document.getElementById('logoutBtn').addEventListener('click', () => {
+            localStorage.removeItem('token');
+            localStorage.removeItem('user');
+            sessionStorage.removeItem('token');
             sessionStorage.removeItem('user');
             window.location.href = '/login';
         });
