--- a/frontend/dashboard-enseignant.html
+++ b/frontend/dashboard-enseignant.html
@@ -470,6 +470,9 @@
 
     // ==================== EVENT LISTENERS ====================
     document.getElementById('logoutBtn').addEventListener('click', () => {
+        localStorage.removeItem('token');
+        localStorage.removeItem('user');
+        sessionStorage.removeItem('token');
         sessionStorage.removeItem('user');
         window.location.href = '/login';
     });
