--- a/frontend/entreprise-offre-candidatures.html
+++ b/frontend/entreprise-offre-candidatures.html
@@ -366,6 +366,9 @@
   // ==================== EVENTS ====================
   document.getElementById('refreshBtn').addEventListener('click', loadCandidatures);
   document.getElementById('logoutBtn').addEventListener('click', () => {
+    localStorage.removeItem('token');
+    localStorage.removeItem('user');
+    sessionStorage.removeItem('token');
     sessionStorage.removeItem('user');
     window.location.href = '/login';
   });
