--- a/frontend/profil-secretaire.html
+++ b/frontend/profil-secretaire.html
@@ -311,8 +311,10 @@
       document.getElementById("btnRefresh")?.addEventListener("click", loadProfil);
 
       document.getElementById("logoutBtn")?.addEventListener("click", () => {
+        localStorage.removeItem('token');
+        localStorage.removeItem('user');
         sessionStorage.clear();
-        window.location.href = "/login.html";
+        window.location.href = "/login";
       });
     });
   </script>
