--- a/frontend/referentiel.html
+++ b/frontend/referentiel.html
@@ -522,6 +522,9 @@
 
         // Déconnexion
         document.getElementById('logoutBtn').addEventListener('click', () => {
+            localStorage.removeItem('token');
+            localStorage.removeItem('user');
+            sessionStorage.removeItem('token');
             sessionStorage.removeItem('user');
             window.location.href = '/login';
         });
