--- a/frontend/candidatures.html
+++ b/frontend/candidatures.html
@@ -191,6 +191,9 @@
         }
 
         document.getElementById('logoutBtn').addEventListener('click', () => {
+            localStorage.removeItem('token');
+            localStorage.removeItem('user');
+            sessionStorage.removeItem('token');
             sessionStorage.removeItem('user');
             window.location.href = '/login';
         });
