--- a/frontend/dashboard-secretaire.html
+++ b/frontend/dashboard-secretaire.html
@@ -331,8 +331,10 @@
 
     function setupEventListeners() {
         document.getElementById('logoutBtn').addEventListener('click', () => {
+            localStorage.removeItem('token');
+            localStorage.removeItem('user');
             sessionStorage.clear();
-            window.location.href = '/login.html';
+            window.location.href = '/login';
         });
     }
 
