--- a/frontend/gestion-etudiants.html
+++ b/frontend/gestion-etudiants.html
@@ -233,8 +233,10 @@
 
     function setupEventListeners() {
       document.getElementById("logoutBtn").addEventListener("click", () => {
+        localStorage.removeItem('token');
+        localStorage.removeItem('user');
         sessionStorage.clear();
-        window.location.href = "/login.html";
+        window.location.href = "/login";
       });
 
       document.getElementById("refreshBtn").addEventListener("click", loadEtudiants);
