--- a/frontend/offres.html
+++ b/frontend/offres.html
@@ -265,7 +265,7 @@
 
         // Fonction pour initialiser la navigation selon le rôle
         function initNavigation() {
-            const user = JSON.parse(sessionStorage.getItem('user') || 'null');
+            const user = JSON.parse(localStorage.getItem('user') || sessionStorage.getItem('user') || 'null');
             const role = user?.role?.toLowerCase() || 'etudiant';
             const config = navConfig[role] || navConfig.etudiant;
 
@@ -296,7 +296,7 @@
 
         // Gestion de l'authentification
         function initAuth() {
-            const user = JSON.parse(sessionStorage.getItem('user') || 'null');
+            const user = JSON.parse(localStorage.getItem('user') || sessionStorage.getItem('user') || 'null');
             if (user) {
                 const initial = (user.email || '?').charAt(0).toUpperCase();
                 document.getElementById('userInitial').textContent = initial;
@@ -307,6 +307,9 @@
         }
 
         document.getElementById('logoutBtn').addEventListener('click', () => {
+            localStorage.removeItem('token');
+            localStorage.removeItem('user');
+            sessionStorage.removeItem('token');
             sessionStorage.removeItem('user');
             window.location.href = '/login';
         });
