--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -363,6 +363,9 @@
     }
 
     document.getElementById('logout').addEventListener('click', () => {
+        localStorage.removeItem('token');
+        localStorage.removeItem('user');
+        sessionStorage.removeItem('token');
         sessionStorage.removeItem('user');
         window.location.href = '/login';
     });
