--- a/frontend/dashboard-secretaire.html
+++ b/frontend/dashboard-secretaire.html
@@ -62,7 +62,7 @@
         <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <!-- Logo -->
-                <a href="/secretaire/dashboard" class="flex items-center space-x-2">
+                <a href="/" class="flex items-center space-x-2">
                     <div class="w-10 h-10 gradient-bg rounded-lg flex items-center justify-center">
                         <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -209,46 +209,25 @@
             </div>
         </div>
 
-        <!-- RC expirées - Action requise -->
+        <!-- RC expirées - Action requise (Dynamique) -->
         <div class="bg-white rounded-xl shadow-sm">
-            <div class="px-6 py-4 border-b border-gray-200">
+            <div class="px-6 py-4 border-b border-gray-200 flex items-center justify-between">
                 <h3 class="text-lg font-semibold text-gray-900">RC expirées - Action requise</h3>
+                <span id="rcExpireesBadge"
+                    class="hidden text-xs bg-red-100 text-red-700 px-2 py-1 rounded-full font-semibold">
+                0
+                </span>
             </div>
-            <div class="divide-y divide-gray-200">
-                <!-- Expired RC Item 1 (Mock Data) -->
-                <div class="px-6 py-4 bg-red-50 flex items-center justify-between">
-                    <div class="flex items-center space-x-4 flex-1">
-                        <div class="w-10 h-10 bg-red-100 rounded-full flex items-center justify-center">
-                            <span class="text-red-600 font-semibold text-sm">SB</span>
-                        </div>
-                        <div class="flex-1">
-                            <h4 class="text-sm font-medium text-gray-900">Sophie Bernard</h4>
-                            <p class="text-xs text-red-600 font-medium">⚠️ RC expirée depuis 15 jours</p>
-                        </div>
-                    </div>
-                    <button
-                        class="px-4 py-2 bg-primary-600 hover:bg-primary-700 text-white text-sm rounded-lg transition">
-                        Contacter l'étudiant
-                    </button>
-                </div>
 
-                <!-- Expired RC Item 2 (Mock Data) -->
-                <div class="px-6 py-4 bg-red-50 flex items-center justify-between">
-                    <div class="flex items-center space-x-4 flex-1">
-                        <div class="w-10 h-10 bg-red-100 rounded-full flex items-center justify-center">
-                            <span class="text-red-600 font-semibold text-sm">TD</span>
-                        </div>
-                        <div class="flex-1">
-                            <h4 class="text-sm font-medium text-gray-900">Thomas Durand</h4>
-                            <p class="text-xs text-red-600 font-medium">⚠️ RC expirée depuis 8 jours</p>
-                        </div>
-                    </div>
-                    <button
-                        class="px-4 py-2 bg-primary-600 hover:bg-primary-700 text-white text-sm rounded-lg transition">
-                        Contacter l'étudiant
-                    </button>
-                </div>
+            <div id="rcExpireesLoading" class="px-6 py-6 text-sm text-gray-500">
+                Chargement des RC expirées...
             </div>
+
+            <div id="rcExpireesEmpty" class="hidden px-6 py-6 text-sm text-gray-500">
+                Aucune attestation RC expirée.
+            </div>
+
+            <div id="rcExpireesList" class="divide-y divide-gray-200"></div>
         </div>
     </main>
 
@@ -322,6 +301,7 @@
         initUserUI();
         loadStats();
         loadAttestations();
+        loadAttestationsExpirees();
         setupEventListeners();
         setActiveMenu();
         if (window.location.hash === "#validation-rc") {
@@ -469,6 +449,88 @@
 
         row.querySelector('[data-action="valider"]').addEventListener("click", () => onValider(etudiantId));
         row.querySelector('[data-action="refuser"]').addEventListener("click", () => onRefuser(etudiantId));
+
+        return row;
+    }
+// ==================== RC : EXPIREES ====================
+    async function loadAttestationsExpirees() {
+        const loading = document.getElementById("rcExpireesLoading");
+        const empty = document.getElementById("rcExpireesEmpty");
+        const list = document.getElementById("rcExpireesList");
+        const badge = document.getElementById("rcExpireesBadge");
+
+        loading.classList.remove("hidden");
+        empty.classList.add("hidden");
+        list.innerHTML = "";
+        badge.classList.add("hidden");
+
+        try {
+            const res = await fetch(`/api/dashboard/secretaire/attestations-expirees?userId=${userId}`);
+            const data = await res.json();
+
+            loading.classList.add("hidden");
+
+            if (!data.ok) {
+            console.error(data.error || "Erreur chargement RC expirées");
+            empty.textContent = "Erreur lors du chargement des RC expirées.";
+            empty.classList.remove("hidden");
+            return;
+            }
+
+            const items = data.attestations || [];
+
+            if (items.length === 0) {
+            empty.classList.remove("hidden");
+            return;
+            }
+
+            badge.textContent = String(items.length);
+            badge.classList.remove("hidden");
+
+            items.forEach(a => list.appendChild(renderRcExpireeRow(a)));
+
+        } catch (e) {
+            loading.classList.add("hidden");
+            empty.textContent = "Erreur technique lors du chargement des RC expirées.";
+            empty.classList.remove("hidden");
+            console.error(e);
+        }
+        }
+
+        function renderRcExpireeRow(a) {
+        const fullName = `${a.prenom || ''} ${a.nom || ''}`.trim() || (a.email || `Étudiant #${a.etudiant_id}`);
+        const initials = getInitials(a.prenom, a.nom);
+        const days = Number(a.jours_depuis_expiration) || 0;
+        const email = a.email || "";
+
+        const row = document.createElement("div");
+        row.className = "px-6 py-4 bg-red-50 flex items-center justify-between";
+
+        row.innerHTML = `
+            <div class="flex items-center space-x-4 flex-1">
+            <div class="w-10 h-10 bg-red-100 rounded-full flex items-center justify-center">
+                <span class="text-red-600 font-semibold text-sm">${escapeHtml(initials)}</span>
+            </div>
+            <div class="flex-1">
+                <h4 class="text-sm font-medium text-gray-900">${escapeHtml(fullName)}</h4>
+                <p class="text-xs text-red-600 font-medium">⚠️ RC expirée depuis ${escapeHtml(days)} jours</p>
+            </div>
+            </div>
+
+            <button data-action="contact"
+            class="px-4 py-2 bg-primary-600 hover:bg-primary-700 text-white text-sm rounded-lg transition">
+            Contacter l'étudiant
+            </button>
+        `;
+
+        row.querySelector('[data-action="contact"]').addEventListener("click", () => {
+            if (!email) return alert("Email indisponible.");
+            const subject = encodeURIComponent("Attestation RC expirée - Action requise");
+            const body = encodeURIComponent(
+            `Bonjour,\n\nVotre attestation de responsabilité civile est expirée. Merci de déposer une attestation à jour sur Candidapp.\n\nCordialement,\nSecrétariat`
+            );
+            window.location.href = `mailto:${email}?subject=${subject}&body=${body}`;
+        });
 
         return row;
     }
