--- a/frontend/dashboard-enseignant.html
+++ b/frontend/dashboard-enseignant.html
@@ -53,7 +53,7 @@
     <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-16">
             <!-- Logo -->
-            <a href="/enseignant/dashboard" class="flex items-center space-x-2">
+            <a href="/" class="flex items-center space-x-2">
                 <div class="w-10 h-10 gradient-bg rounded-lg flex items-center justify-center">
                     <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
