--- a/frontend/candidatures.html
+++ b/frontend/candidatures.html
@@ -66,41 +66,52 @@
                     <a href="/" class="text-gray-600 hover:text-primary-600 transition">Accueil</a>
                     <a href="/profile" class="text-gray-600 hover:text-primary-600 transition">Mon profil</a>
                     <a href="/offres" class="text-gray-600 hover:text-primary-600 transition">Offres</a>
-                    <a href="/candidatures" class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Mes candidatures</a>
+                    <a href="/candidatures"
+                        class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Mes candidatures</a>
                 </div>
 
                 <!-- User Menu -->
                 <div class="flex items-center space-x-4">
                     <!-- Notification Bell -->
                     <div id="notificationBell" class="relative">
-                        <button onclick="toggleNotificationPanel()" class="relative p-2 text-gray-600 hover:text-primary-600 transition">
+                        <button onclick="toggleNotificationPanel()"
+                            class="relative p-2 text-gray-600 hover:text-primary-600 transition">
                             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"/>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
                             </svg>
-                            <span id="notifBadge" class="hidden absolute -top-1 -right-1 bg-red-500 text-white text-xs font-bold rounded-full w-5 h-5 flex items-center justify-center">0</span>
+                            <span id="notifBadge"
+                                class="hidden absolute -top-1 -right-1 bg-red-500 text-white text-xs font-bold rounded-full w-5 h-5 flex items-center justify-center">0</span>
                         </button>
-                        <div id="notifPanel" class="hidden absolute right-0 mt-2 w-80 bg-white rounded-xl shadow-2xl border border-gray-100 z-50">
+                        <div id="notifPanel"
+                            class="hidden absolute right-0 mt-2 w-80 bg-white rounded-xl shadow-2xl border border-gray-100 z-50">
                             <div class="p-4 border-b border-gray-100 flex justify-between items-center">
                                 <h3 class="font-semibold text-gray-900">Notifications</h3>
-                                <button onclick="markAllRead()" class="text-sm text-primary-600 hover:text-primary-700 font-medium">Tout marquer lu</button>
+                                <button onclick="markAllRead()"
+                                    class="text-sm text-primary-600 hover:text-primary-700 font-medium">Tout marquer
+                                    lu</button>
                             </div>
                             <div id="notifList" class="max-h-96 overflow-y-auto"></div>
                             <div class="p-3 border-t border-gray-100 text-center">
-                                <a href="#" class="text-sm text-primary-600 hover:text-primary-700 font-medium">Voir toutes les notifications</a>
+                                <a href="#" class="text-sm text-primary-600 hover:text-primary-700 font-medium">Voir
+                                    toutes les notifications</a>
                             </div>
                         </div>
                     </div>
 
-                    <div id="userBadge" class="hidden md:flex items-center space-x-2 bg-primary-50 px-3 py-1.5 rounded-full">
+                    <div id="userBadge"
+                        class="hidden md:flex items-center space-x-2 bg-primary-50 px-3 py-1.5 rounded-full">
                         <div class="w-8 h-8 bg-primary-600 rounded-full flex items-center justify-center">
                             <span id="userInitial" class="text-white font-semibold text-sm"></span>
                         </div>
-                        <span id="userEmailBadge" class="text-primary-700 font-medium text-sm max-w-[120px] truncate"></span>
+                        <span id="userEmailBadge"
+                            class="text-primary-700 font-medium text-sm max-w-[120px] truncate"></span>
                     </div>
-                    <button id="logoutBtn" class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
+                    <button id="logoutBtn"
+                        class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
+                                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
                         </svg>
                         <span class="hidden sm:inline">Déconnexion</span>
                     </button>
@@ -213,9 +224,9 @@
                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                  </svg>`
                 },
-                'RETENU': {
+                'ACCEPTE': {
                     class: 'bg-green-100 text-green-800 border-green-200',
-                    label: 'Retenu',
+                    label: 'Accepte',
                     icon: `<svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                  </svg>`
@@ -359,7 +370,7 @@
                     const statutBadge = getStatutBadge(candidature.statut_candidature);
                     const offreInvalide = candidature.statut_candidature === 'EN_ATTENTE' &&
                         isOffreInvalide(candidature.statut_actuel_offre);
-                    const peutAnnuler = candidature.statut_candidature === 'EN_ATTENTE';
+                    const peutAnnuler = candidature.statut_candidature === 'EN_ATTENTE' || candidature.statut_candidature === 'RETENU';
 
                     const candidatureCard = document.createElement('div');
                     candidatureCard.className = 'bg-white rounded-2xl shadow-lg p-6 card-hover';
