--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -319,6 +319,84 @@
 
                 </div>
 
+                <!-- Mon Stage Actif -->
+                <div id="stageSection" class="mt-8 hidden">
+                    <h2 class="text-lg font-semibold text-gray-900 mb-4">Mon Stage Actif</h2>
+
+                    <div id="stageCard"
+                        class="bg-gradient-to-br from-green-50 to-emerald-50 rounded-2xl shadow-lg border-2 border-green-200 overflow-hidden">
+                        <div class="p-6">
+                            <div class="flex items-start justify-between mb-4">
+                                <div class="flex items-center space-x-3">
+                                    <div class="w-12 h-12 bg-green-600 rounded-full flex items-center justify-center">
+                                        <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor"
+                                            viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                        </svg>
+                                    </div>
+                                    <div>
+                                        <span
+                                            class="inline-flex items-center px-3 py-1 rounded-full text-xs font-bold bg-green-600 text-white">
+                                            ✓ STAGE VALIDÉ
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="space-y-3 mb-4">
+                                <div class="flex items-start space-x-2">
+                                    <svg class="w-5 h-5 text-green-700 mt-0.5" fill="none" stroke="currentColor"
+                                        viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                                    </svg>
+                                    <div>
+                                        <p id="stageTitre" class="font-semibold text-gray-900">-</p>
+                                    </div>
+                                </div>
+
+                                <div class="flex items-start space-x-2">
+                                    <svg class="w-5 h-5 text-green-700 mt-0.5" fill="none" stroke="currentColor"
+                                        viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" />
+                                    </svg>
+                                    <p id="stageEntreprise" class="text-gray-700">-</p>
+                                </div>
+
+                                <div class="flex items-center space-x-2">
+                                    <svg class="w-5 h-5 text-green-700" fill="none" stroke="currentColor"
+                                        viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                                    </svg>
+                                    <p id="stageDate" class="text-gray-700">-</p>
+                                </div>
+                            </div>
+
+                            <div class="pt-4 border-t border-green-200">
+                                <button id="renounceBtn" onclick="handleRenounce()"
+                                    class="w-full inline-flex items-center justify-center space-x-2 bg-red-600 hover:bg-red-700 text-white px-4 py-3 rounded-lg font-semibold transition shadow-md hover:shadow-lg">
+                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                                    </svg>
+                                    <span>Renoncer au stage</span>
+                                </button>
+                                <p class="text-xs text-gray-600 mt-2 text-center">
+                                    <svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor"
+                                        viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                    </svg>
+                                    Action irréversible - Une justification vous sera demandée
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Recent Activity -->
                 <div class="mt-8">
                     <h2 class="text-lg font-semibold text-gray-900 mb-4">Activité récente</h2>
@@ -773,6 +851,174 @@
 
         // Charger le profil étudiant
         loadEtudiantProfile();
+
+        // ===== GESTION DU STAGE ACTIF ET RENONCEMENT =====
+
+        let currentStage = null;
+
+        async function loadStageActif() {
+            const user = JSON.parse(sessionStorage.getItem('user') || 'null');
+            if (!user || user.role !== 'ETUDIANT') return;
+
+            try {
+                // Récupérer les candidatures de l'étudiant
+                const res = await fetch('/api/candidatures/me', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ userId: user.id, role: user.role })
+                });
+
+                const data = await res.json();
+                if (!data.ok || !data.candidatures) return;
+
+                // Chercher une candidature avec statut ACCEPTE (stage validé)
+                const stageValide = data.candidatures.find(c => c.statut_candidature === 'ACCEPTE');
+
+                if (stageValide) {
+                    currentStage = stageValide;
+
+                    // Afficher la section stage
+                    document.getElementById('stageSection').classList.remove('hidden');
+
+                    // Remplir les informations
+                    document.getElementById('stageTitre').textContent = stageValide.offre_titre || '-';
+                    document.getElementById('stageEntreprise').textContent = stageValide.entreprise_nom || '-';
+
+                    // Stocker l'ID pour debug
+                    console.log('[STAGE ACTIF] Candidature trouvée:', stageValide);
+                    console.log('[STAGE ACTIF] ID disponibles:', {
+                        id: stageValide.id,
+                        candidature_id: stageValide.candidature_id
+                    });
+
+                    // Formater la date de début si disponible
+                    if (stageValide.date_debut_stage) {
+                        document.getElementById('stageDate').textContent =
+                            'Début : ' + formatDate(stageValide.date_debut_stage);
+                    } else {
+                        document.getElementById('stageDate').textContent = 'Date de début à confirmer';
+                    }
+                }
+            } catch (error) {
+                console.error('Erreur lors du chargement du stage actif:', error);
+            }
+        }
+
+        async function handleRenounce() {
+            if (!currentStage) {
+                alert('Aucun stage actif trouvé');
+                return;
+            }
+
+            // Confirmation sérieuse
+            const confirmation = confirm(
+                "⚠️ ATTENTION : Vous êtes sur le point d'annuler votre stage validé.\n\n" +
+                "Cette action est IRRÉVERSIBLE.\n\n" +
+                "Voulez-vous continuer ?"
+            );
+
+            if (!confirmation) return;
+
+            // Demander la justification
+            const justification = prompt(
+                "Veuillez saisir OBLIGATOIREMENT le motif de votre renoncement :\n\n" +
+                "Exemples : raisons personnelles, offre non conforme, changement de situation, etc."
+            );
+
+            // Vérifier que la justification n'est pas vide
+            if (!justification || justification.trim().length === 0) {
+                alert('La justification est obligatoire. Renoncement annulé.');
+                return;
+            }
+
+            const user = JSON.parse(sessionStorage.getItem('user') || 'null');
+            if (!user) {
+                alert('Erreur : Utilisateur non connecté');
+                return;
+            }
+
+            // Désactiver le bouton pendant le traitement
+            const btn = document.getElementById('renounceBtn');
+            const originalContent = btn.innerHTML;
+            btn.disabled = true;
+            btn.innerHTML = `
+                <svg class="w-5 h-5 animate-spin" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                        d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+                </svg>
+                <span>Traitement en cours...</span>
+            `;
+
+            console.log('[RENONCEMENT] Début de la requête');
+            console.log('[RENONCEMENT] Stage actuel:', currentStage);
+            console.log('[RENONCEMENT] Candidature ID (id):', currentStage.id);
+            console.log('[RENONCEMENT] Candidature ID (candidature_id):', currentStage.candidature_id);
+            console.log('[RENONCEMENT] URL:', '/api/etudiant/renounce');
+
+            try {
+                const res = await fetch('/api/etudiant/renounce', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        candidature_id: currentStage.candidature_id || currentStage.id,
+                        justification: justification.trim()
+                    })
+                });
+
+                console.log('[RENONCEMENT] Status HTTP:', res.status);
+                console.log('[RENONCEMENT] Status Text:', res.statusText);
+
+                // Vérifier si la réponse est du JSON
+                const contentType = res.headers.get('content-type');
+                if (!contentType || !contentType.includes('application/json')) {
+                    console.error('[RENONCEMENT] Réponse non-JSON reçue:', contentType);
+                    const textResponse = await res.text();
+                    console.error('[RENONCEMENT] Contenu de la réponse:', textResponse);
+                    throw new Error('Le serveur n\'a pas renvoyé du JSON. Vérifiez la console.');
+                }
+
+                const data = await res.json();
+                console.log('[RENONCEMENT] Réponse du serveur:', data);
+
+                if (res.ok && data.ok) {
+                    console.log('[RENONCEMENT] Succès !');
+                    alert(data.message || 'Votre renoncement a été pris en compte.');
+
+                    // Recharger la page pour refléter les changements
+                    window.location.reload();
+                } else {
+                    console.error('[RENONCEMENT] Erreur serveur:', data.error);
+                    alert('❌ Erreur : ' + (data.error || 'Impossible de traiter votre renoncement'));
+
+                    // Restaurer le bouton
+                    btn.disabled = false;
+                    btn.innerHTML = originalContent;
+                }
+            } catch (error) {
+                console.error('[RENONCEMENT] Exception attrapée:', error);
+                console.error('[RENONCEMENT] Type d\'erreur:', error.name);
+                console.error('[RENONCEMENT] Message d\'erreur:', error.message);
+                console.error('[RENONCEMENT] Stack trace:', error.stack);
+
+                let errorMsg = 'Erreur technique lors du renoncement.';
+                if (error.message.includes('Failed to fetch')) {
+                    errorMsg = '❌ Erreur réseau : Impossible de joindre le serveur. Vérifiez que le backend tourne.';
+                } else if (error.message.includes('JSON')) {
+                    errorMsg = '❌ Erreur : Le serveur a renvoyé une réponse invalide. Consultez la console (F12).';
+                } else {
+                    errorMsg = '❌ ' + error.message;
+                }
+
+                alert(errorMsg + '\n\nDétails dans la console (F12).');
+
+                // Restaurer le bouton
+                btn.disabled = false;
+                btn.innerHTML = originalContent;
+            }
+        }
+
+        // Charger le stage actif au chargement de la page
+        loadStageActif();
     </script>
     <script src="/js/notifications.js"></script>
 </body>
