Correction du mot de passe pour l'option Entreprise dans le formulaire de connexion

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -71,7 +71,7 @@
             <option value="etudiant@univ.fr|password123">Étudiant</option>
             <option value="professeur@univ.fr|password123">Enseignant</option>
             <option value="secretaire@univ.fr|password123">Secrétaire</option>
-            <option value="rh@innotech.com|password123!">Entreprise</option>
+            <option value="rh@innotech.com|password123">Entreprise</option>
           </select>
         </div>
 
